# powerapi

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh  clean.sh  install.sh  uninstall.sh
common/inc/: list.h  pwrbuffer.h  pwrdata.h  pwrerr.h  pwrmsg.h
common/src/: pwrbuffer.c  pwrmsg.c
pwrapic/: CMakeLists.txt
pwrapic/gtest/: CMakeLists.txt  Common.cpp  GtestBase.cpp  GtestLog.cpp  RegisterOkCommonTest.cpp  RegisterOkCpuTest.cpp  RegisterOkTest.cpp  get_gtest.sh  lcov.sh
pwrapic/gtest/include/: Common.h  GtestLog.h
pwrapic/inc/: powerapi.h  pwrcom.h  pwrcpu.h  pwrdisk.h  pwrhbm.h  pwrlog.h  pwrnet.h  pwrproc.h  pwrsys.h  pwrtask.h  pwrusb.h  sockclient.h
pwrapic/src/: CMakeLists.txt  powerapi.c  pwrcom.c  pwrcpu.c  pwrdisk.c  pwrhbm.c  pwrnet.c  pwrproc.c  pwrsys.c  pwrtask.c  pwrusb.c  sockclient.c
pwrapic/test/: CMakeLists.txt  demo_main.c  procapitest.c  procapitest.h
pwrapis/: pwrapis.service
pwrapis/conf/: pwrapis_config.ini
pwrapis/inc/: common.h  comservice.h  config.h  cpuservice.h  diskservice.h  gather.h  hbmservice.h  log.h  procservice.h  pwrclient.h  server.h  sysservice.h  taskservice.h  utils.h
pwrapis/src/: CMakeLists.txt  comservice.c  config.c  cpuservice.c  diskservice.c  hbmservice.c  log.c  main_frame.c  procservice.c  pwrclient.c  server.c  sysservice.c  taskservice.c  utils.c
